<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HW5</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up">SignUp Activity</string>
    <string name="title_activity_apps">Apps Activity</string>
    <string name="title_activity_preview">Preview Activity</string>
    <string name="action_settings">Settings</string>
    <string name="view_all">View All</string>
    <string name="view_fav">View Favorites</string>
    <string name="clear_fav">Clear Favorites</string>
    <string name="view_shared">View Shared</string>
    <string name="clear_shared">Clear Shared</string>
    <string name="logout">Logout</string>
    <string name="button2">History</string>
    <string name="url">https://itunes.apple.com/us/rss/topgrossingapplications/limit=100/xml</string>
    <string name="parseClass">&quot;Favorites&quot;</string>
    <string name="parse_isShared">isSharedWithUser</string>
    <string name="parse_isFav">isFavorite</string>
    <dimen name="PADDING">10dp</dimen>
    <dimen name="BIG_PADDING">40dp</dimen>
    <dimen name="image_dimension">90dp</dimen>
    <dimen name="title_size">20sp</dimen>

</resources>