<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.test.MainActivity" >

    <item
        android:id="@+id/view_all"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/view_all"/>
    <item
        android:id="@+id/view_fav"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/view_fav"/>
    <item
        android:id="@+id/clear_fav"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/clear_fav"/>
    <item
        android:id="@+id/view_shared"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/view_shared"/>
    <item
        android:id="@+id/clear_shared"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/clear_shared"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>